Fixed modal error. - upgraded vite version (version 4.3 got released today.) - Modal shifted from todo component to home component. - handle change spelling mistake fixed

--- a/src/index.css
+++ b/src/index.css
@@ -232,10 +232,9 @@ body {
 }
 .modal-header .close {
   padding: 1rem 1rem;
-  margin: -1rem -1rem -1rem auto;
 }
 .modal-title {
-  line-height: 1.5;
+  font-size: 1.5rem;
 }
 .modal-body {
   position: relative;
